--- a/portfolio/src/components/Heroimgstyles.css
+++ b/portfolio/src/components/Heroimgstyles.css
@@ -22,9 +22,10 @@
     opacity: 0.5;
 }
 
-.her0{
-    height: 100;
-    width: 100;
+.hero{
+    height: 100vh;
+    width: 100%;
+    position: relative;
 
 }
 .hero .content{
@@ -49,13 +50,17 @@
     margin: 0.3rem;
 }
 
-@media  screen and (max-width:640px) {
+@media  screen and (max-width:1480px) {
     .hero .content h1{
         font-size: 3;
     }
     
     .hero .content p{
         font-size: 1.4rem;
+    }
+
+    .content .btn{
+        margin: 0.3rem;
     }
     
 }
