--- a/portfolio/src/components/Heroimgstyles.css
+++ b/portfolio/src/components/Heroimgstyles.css
@@ -50,13 +50,19 @@
     margin: 0.3rem;
 }
 
-@media  screen and (max-width:1480px) {
+@media  screen and (max-width:786px) {
     .hero .content h1{
-        font-size: 3;
+        font-size: 2rem;
     }
     
     .hero .content p{
-        font-size: 1.4rem;
+        font-size: 1.2rem;
+    }
+
+    .content{
+        display: block;
+        width: 100%;
+        margin:0.3rem 0;
     }
     
 }
