--- a/portfolio/src/components/Footerstyles.css
+++ b/portfolio/src/components/Footerstyles.css
@@ -16,7 +16,7 @@
     max-width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 1rem;    
+    /*padding: 1rem;*/    
 }
 
 .location{
@@ -31,22 +31,25 @@
     max-width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    /*padding: 1rem;*/
 }
 .social{
     margin-top: 1rem;
 }
 
 h4{
-    font-size: 12;
+    /*font-size: 12;*/
     padding-bottom: 0.7rem;
 }
 p{
-    font-size: 15;
+   /* font-size: 15;*/
 }
 
 @media screen and(max-width:400px){
     .footer-container{
         grid-template-columns:1fr;
     }
+    h4 { font-size: 1rem; }
+    p { font-size: 16px; } 
+    .left, .right { padding: 0.5rem; }
 }
