--- a/portfolio/src/components/Footerstyles.css
+++ b/portfolio/src/components/Footerstyles.css
@@ -38,18 +38,15 @@
 }
 
 h4{
-    /*font-size: 12;*/
+    font-size: 12;
     padding-bottom: 0.7rem;
 }
 p{
-   /* font-size: 15;*/
+    font-size: 15;
 }
 
 @media screen and(max-width:400px){
     .footer-container{
         grid-template-columns:1fr;
     }
-    h4 { font-size: 1rem; }
-    p { font-size: 16px; } 
-    .left, .right { padding: 0.5rem; }
 }
