--- a/portfolio/src/components/Footerstyles.css
+++ b/portfolio/src/components/Footerstyles.css
@@ -27,7 +27,7 @@
     line-height: 30px;
 }
 .right{
-    height: 100vh;
+    height: 100%;
     max-width: 100%;
     display: flex;
     flex-direction: column;
