--- a/portfolio/src/components/Footerstyles.css
+++ b/portfolio/src/components/Footerstyles.css
@@ -47,6 +47,6 @@ p{
 
 @media screen and(max-width:400px){
     .footer-container{
-        grid-template-columns:1fr;
+        display: block;
     }
 }
