--- a/portfolio/src/components/Footerstyles.css
+++ b/portfolio/src/components/Footerstyles.css
@@ -1,52 +1,48 @@
-.footer{
+.footer {
     width: 100%;
     padding: 6rem 0;
-    background-color: rgba(19,19,19,0.9);
+    background-color: rgba(19, 19, 19, 0.9);
 }
-.footer-container{
+
+.footer-container {
     max-width: 1140px;
     margin: auto;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap:40px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 40px;
 }
 
-.left{
-    height: 100vh;
+.left, .right {
     max-width: 100%;
     display: flex;
     flex-direction: column;
-    /*padding: 1rem;*/    
+    /* padding: 1rem; */
 }
 
-.location{
+.location {
     display: flex;
     margin-bottom: 0.8rem;
 }
-.location p{
+
+.location p {
     line-height: 30px;
 }
-.right{
-    height: 100%;
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
-    /*padding: 1rem;*/
-}
-.social{
+
+.social {
     margin-top: 1rem;
 }
 
-h4{
-    font-size: 12;
+h4 {
+    font-size: 12px;
     padding-bottom: 0.7rem;
 }
-p{
-    font-size: 15;
+
+p {
+    font-size: 15px;
 }
 
-@media screen and(max-width:400px){
-    .footer-container{
-        display: block;
+@media screen and (max-width: 400px) {
+    .footer-container {
+        grid-template-columns: 1fr;
     }
 }
