--- a/portfolio/src/components/Footerstyles.css
+++ b/portfolio/src/components/Footerstyles.css
@@ -1,60 +1,55 @@
-.footer {
+.footer{
     width: 100%;
     padding: 6rem 0;
-    background-color: rgba(19, 19, 19, 0.9);
+    background-color: rgba(19,19,19,0.9);
 }
-
-.footer-container {
+.footer-container{
     max-width: 1140px;
     margin: auto;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 40px;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap:40px;
 }
 
-.left, .right {
+.left{
+    height: 100vh;
     max-width: 100%;
     display: flex;
     flex-direction: column;
-    /* padding: 1rem; */
+    /*padding: 1rem;*/    
 }
 
-.location {
+.location{
     display: flex;
     margin-bottom: 0.8rem;
 }
-
-.location p {
+.location p{
     line-height: 30px;
 }
-
-.social {
+.right{
+    height: 100%;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    /*padding: 1rem;*/
+}
+.social{
     margin-top: 1rem;
 }
 
-h4 {
-    font-size: 12px;
+h4{
+    font-size: 12;
     padding-bottom: 0.7rem;
 }
-
-p {
-    font-size: 15px;
+p{
+    font-size: 15;
 }
 
-@media screen and (max-width: 380px) {
-    .footer-container {
-        grid-template-columns: 1fr;
+@media screen and(max-width:400px){
+    .footer-container{
+        grid-template-columns:1fr;
     }
-
-    .right {
-        width: 100%;
-    }
-
-    .right h4 {
-        font-size: 16px;
-    }
-
-    .right p {
-        font-size: 14px;
+    .right{
+        font-size: 10px;
     }
 }
