--- a/portfolio/src/components/Footerstyles.css
+++ b/portfolio/src/components/Footerstyles.css
@@ -12,7 +12,7 @@
 }
 
 .left{
-    height: 100vh;
+    height: 100%;
     max-width: 100%;
     display: flex;
     flex-direction: column;
@@ -48,8 +48,5 @@ p{
 @media screen and(max-width:400px){
     .footer-container{
         grid-template-columns:1fr;
-    }
-    .right{
-        font-size: 10px;
     }
 }
