--- a/portfolio/src/components/Heroimg2styles.css
+++ b/portfolio/src/components/Heroimg2styles.css
@@ -7,7 +7,7 @@
 
 .hero-img::before{
     content: "";
-    background: url("https://images.unsplash.com/photo-1590959651373-a3db0f38a961?q=80&w=1939&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA==3d");
+    background: url("https://images.unsplash.com/photo-1487088678257-3a541e6e3922?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHBvcnRmb2xpb3xlbnwwfHwwfHx8MA%3D%3D");
     background-size: cover;
     background-position: center;
     height: 100vh;
