--- a/portfolio/src/components/AboutContentStyles.css
+++ b/portfolio/src/components/AboutContentStyles.css
@@ -16,12 +16,21 @@
 }
 .about .left p{
     margin: 1.2rem 0;
+    font-size: 12;
 }
 .about.right{
     max-width: 700px;
 }
+
+.about h1 {
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 0.5rem;
+}
+
 .about h2{
     color:#000000;
+    margin-top: 0;
 }
 .right .img-container{
     display: grid;
