--- a/portfolio/src/components/AboutContentStyles.css
+++ b/portfolio/src/components/AboutContentStyles.css
@@ -16,7 +16,8 @@
 }
 .about .left p{
     margin: 1.2rem 0;
-    font-size: 16;
+    font-size: 20;
+    color: black;
 }
 .about.right{
     max-width: 700px;
