--- a/portfolio/src/components/AboutContentStyles.css
+++ b/portfolio/src/components/AboutContentStyles.css
@@ -18,7 +18,7 @@
     margin: 1.2rem 0;
     font-size: 20;
     color: black;
-    font-size: medium;
+    font-style: bold;
 }
 .about.right{
     max-width: 700px;
