--- a/portfolio/src/components/FormStyles.css
+++ b/portfolio/src/components/FormStyles.css
@@ -1,33 +1,23 @@
-label {
-    color: #333; /* Darker color for better visibility */
-    margin-bottom: 1rem; /* Increase margin bottom for spacing */
-    font-size: 1rem; /* Adjust font size */
+label{
+    color:whitesmoke;
+    margin-bottom: 0.5rem;
 }
-
 form {
     display: flex;
     flex-direction: column;
-    padding: 2rem; /* Decrease padding for a cleaner look */
+    padding: 4rem 1rem;
     margin: auto;
     max-width: 600px;
 }
-
-form input,
-form textarea {
-    margin-bottom: 1.5rem; /* Increase margin bottom for spacing */
-    padding: 12px 18px; /* Adjust padding */
-    font-size: 1rem; /* Adjust font size */
-    background-color: rgba(255, 255, 255, 0.1); /* Lighter background for better contrast */
-    border: 1px solid #ccc; /* Add border for better visibility */
-    color: #333; /* Darker color for better visibility */
+form input,form textarea{
+    margin-bottom: 1rem;
+    padding: 10px 18px;
+    font-size: 18px;
+    background-color: rgba(1,255,255,0.1);
+    border-color:transparent;
+    opacity: 0.5;
+    color:rgb(21, 19, 19);
     font-weight: bold;
     font-family: sans-serif;
-    transition: background-color 0.3s, border-color 0.3s; /* Add smooth transition effect */
-}
-
-form input:focus,
-form textarea:focus {
-    outline: none; /* Remove outline on focus */
-    border-color: #007bff; /* Highlight border color on focus */
-    background-color: rgba(255, 255, 255, 0.2); /* Lighten background on focus */
+    
 }
