--- a/portfolio/src/components/FormStyles.css
+++ b/portfolio/src/components/FormStyles.css
@@ -1,5 +1,5 @@
 label{
-    color:whitesmoke;
+    color:black;
     margin-bottom: 0.5rem;
 }
 form {
@@ -7,16 +7,16 @@ form {
     flex-direction: column;
     padding: 4rem 1rem;
     margin: auto;
-    max-width: 600px;
+    max-width: 400px;
 }
 form input,form textarea{
     margin-bottom: 1rem;
     padding: 10px 18px;
     font-size: 18px;
     background-color: rgba(1,255,255,0.1);
-    border-color:transparent;
+    border-color:darkgray;
     opacity: 0.5;
-    color:rgb(21, 19, 19);
+    color:black;
     font-weight: bold;
     font-family: sans-serif;
     
