--- a/portfolio/src/components/AboutContentStyles.css
+++ b/portfolio/src/components/AboutContentStyles.css
@@ -1,6 +1,6 @@
 .about{
     width:100%;
-    margin: 2rem 0;
+    margin-top: 1rem 0;
     display: flex;
     align-items: center;
     justify-content: center;
