--- a/portfolio/src/components/Heroimgstyles.css
+++ b/portfolio/src/components/Heroimgstyles.css
@@ -42,7 +42,7 @@
     padding:0.6rem 0 1.5rem;
 }
 
-.hero .content p{
+.hero .content h2{
     font-size: 20;
     font-weight: bold;
 }
@@ -51,7 +51,7 @@
     margin: 0.3rem;
 }
 
-@media  screen and (max-width:400px) {
+@media  screen and (max-width:640px) {
     .hero .content h1{
         font-size: 2rem;
     }
