--- a/portfolio/src/components/FormStyles.css
+++ b/portfolio/src/components/FormStyles.css
@@ -1,23 +1,22 @@
 label{
     color:black;
     margin-bottom: 0.5rem;
-    font-size: 14px;
 }
 form {
     display: flex;
     flex-direction: column;
     padding: 4rem 1rem;
     margin: auto;
-    max-width: 400px;
+    max-width: 600px;
 }
 form input,form textarea{
     margin-bottom: 1rem;
     padding: 10px 18px;
     font-size: 18px;
     background-color: rgba(1,255,255,0.1);
-    border-color:darkgray;
+    border-color:transparent;
     opacity: 0.5;
-    color:black;
+    color:white;
     font-weight: bold;
     font-family: sans-serif;
     
