--- a/portfolio/src/components/FormStyles.css
+++ b/portfolio/src/components/FormStyles.css
@@ -17,7 +17,7 @@ form input,form textarea{
     background-color: rgba(1,255,255,0.1);
     border-color:transparent;
     opacity: 0.5;
-    color:white;
+    color: black;
     font-weight: bold;
     font-family: sans-serif;
     
