--- a/portfolio/src/components/AboutContentStyles.css
+++ b/portfolio/src/components/AboutContentStyles.css
@@ -17,7 +17,7 @@
 .about .left p{
     margin: 1.2rem 0;
     font-size: 20px;
-    color: black;
+    color: whitesmoke;
     font-weight: bold;
 }
 .about.right{
