--- a/portfolio/src/components/FormStyles.css
+++ b/portfolio/src/components/FormStyles.css
@@ -1,23 +1,50 @@
-label{
-    color:whitesmoke;
-    margin-bottom: 0.5rem;
-}
-form {
+.form {
     display: flex;
     flex-direction: column;
-    padding: 4rem 1rem;
+    max-width: 400px;
     margin: auto;
-    max-width: 600px;
-}
-form input,form textarea{
+    padding: 2rem;
+  }
+  
+  label {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+    color: #333;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="phone"],
+  textarea {
+    padding: 10px;
     margin-bottom: 1rem;
-    padding: 10px 18px;
-    font-size: 18px;
-    background-color: rgba(1,255,255,0.1);
-    border-color:transparent;
-    opacity: 0.5;
-    color: black;
-    font-weight: bold;
-    font-family: sans-serif;
-    
-}
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  textarea {
+    resize: vertical;
+  }
+  
+  button {
+    padding: 10px 20px;
+    font-size: 1rem;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  button:hover {
+    background-color: #0056b3;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .form {
+      padding: 1rem;
+    }
+  }
+  
