--- a/portfolio/src/components/FormStyles.css
+++ b/portfolio/src/components/FormStyles.css
@@ -9,7 +9,7 @@
   label {
     font-size: 1rem;
     margin-bottom: 0.5rem;
-    color: #333;
+    color: whitesmoke;
   }
   
   input[type="text"],
