--- a/portfolio/src/components/Heroimgstyles.css
+++ b/portfolio/src/components/Heroimgstyles.css
@@ -49,8 +49,16 @@
 
 .content .btn{
     margin: 0.3rem;
+
 }
 
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
 @media  screen and (max-width:500px) {
     .hero .content h1{
         font-size: 2rem;
