--- a/portfolio/src/components/Heroimgstyles.css
+++ b/portfolio/src/components/Heroimgstyles.css
@@ -48,16 +48,8 @@
 }
 
 .content .btn{
-    margin: 0.3rem;
+    margin: 0.3rem auto;
 
-}
-
-.content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
 }
 @media  screen and (max-width:500px) {
     .hero .content h1{
