--- a/portfolio/src/components/Workcardstyles.css
+++ b/portfolio/src/components/Workcardstyles.css
@@ -34,6 +34,7 @@
 }
 .pro-btns .btn{
     padding: 0.1rem;
+    align-items: center;
 }
 @media screen and(max-width:740px) {
     .project-container{
