--- a/portfolio/src/components/Workcardstyles.css
+++ b/portfolio/src/components/Workcardstyles.css
@@ -34,9 +34,9 @@
 }
 .pro-btns .btn{
     padding: 0.1rem;
-    align-items: center;
+    margin: auto;
 }
-@media screen and(max-width:740px) {
+@media screen and(max-width:500px) {
     .project-container{
         max-width: 90%;
         margin: auto;
