--- a/portfolio/src/components/Workcardstyles.css
+++ b/portfolio/src/components/Workcardstyles.css
@@ -27,14 +27,14 @@
     font-size: 1.1rem;
     text-align: justify;
 }
-.pro-btns{
+/* .pro-btns{
     display: flex;
     justify-content: space-between;
     padding: 0.5rem 0;
-}
+} */
 .pro-btns .btn{
     padding: 0.1rem;
-    margin: auto;
+    align-self: flex-end;
 }
 @media screen and(max-width:500px) {
     .project-container{
