--- a/portfolio/src/components/Workcardstyles.css
+++ b/portfolio/src/components/Workcardstyles.css
@@ -27,11 +27,11 @@
     font-size: 1.1rem;
     text-align: justify;
 }
-/* .pro-btns{
+.pro-btns{
     display: flex;
     justify-content: space-between;
     padding: 0.5rem 0;
-} */
+}
 .pro-btns .btn{
     padding: 0.1rem;
     margin: auto;
@@ -41,7 +41,6 @@
         max-width: 90%;
         margin: auto;
         grid-template-columns: 1fr;
-        flex-direction: row;
     }
     .pro-details{
         overflow: auto;
