--- a/portfolio/src/components/Workcardstyles.css
+++ b/portfolio/src/components/Workcardstyles.css
@@ -12,7 +12,7 @@
     padding-bottom: 5rem;
 }
 .project-card{
-    background: transparent;
+    background: red;
     padding: 1.2rem 1rem;
 }
 .project-card img{
