--- a/portfolio/src/components/Workcardstyles.css
+++ b/portfolio/src/components/Workcardstyles.css
@@ -31,6 +31,7 @@
     display: flex;
     justify-content: space-between;
     padding: 0.5rem 0;
+    flex-wrap: nowrap;
 }
 .pro-btns .btn{
     padding: 0.1rem;
