--- a/portfolio/src/components/Workcardstyles.css
+++ b/portfolio/src/components/Workcardstyles.css
@@ -34,8 +34,8 @@
     flex-wrap: nowrap;
 }
 .pro-btns .btn{
-    padding: 0.1rem;
-    margin: auto;
+    padding: 0.5rem;
+    margin: 0;
 }
 @media screen and(max-width:500px) {
     .project-container{
