--- a/portfolio/src/components/Workcardstyles.css
+++ b/portfolio/src/components/Workcardstyles.css
@@ -35,7 +35,7 @@
 }
 .pro-btns .btn{
     padding: 0.5rem;
-    margin: 0;
+    margin: auto;
 }
 @media screen and(max-width:500px) {
     .project-container{
