--- a/portfolio/src/components/Workcardstyles.css
+++ b/portfolio/src/components/Workcardstyles.css
@@ -25,7 +25,7 @@
 .pro-details{
     padding-bottom: 1rem;
     font-size: 1.1rem;
-    text-align: center;
+    text-align: match-parent;
 }
 .pro-btns{
     display: flex;
