--- a/portfolio/src/components/Workcardstyles.css
+++ b/portfolio/src/components/Workcardstyles.css
@@ -31,7 +31,7 @@
     display: flex;
     justify-content: space-between;
     padding: 0.5rem 0;
-    flex-wrap: nowrap;
+    align-items:baseline ;
 }
 .pro-btns .btn{
     padding: 0.5rem;
