--- a/portfolio/src/components/Footerstyles.css
+++ b/portfolio/src/components/Footerstyles.css
@@ -16,7 +16,6 @@
     max-width: 100%;
     display: flex;
     flex-direction: column;
-    /* padding: 1rem; */
 }
 
 .location {
@@ -25,7 +24,8 @@
 }
 
 .location p {
-    line-height: 30px;
+    line-height: 1.5;
+    margin: 0;
 }
 
 .social {
@@ -33,18 +33,19 @@
 }
 
 h4 {
-    font-size: 15px;
+    font-size: 16px;
     padding-bottom: 0.7rem;
 }
 
 p {
-    font-size: 18px;
+    font-size: 16px;
+    margin: 0.5rem 0;
 }
 
-
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 800px) {
     .footer-container {
         grid-template-columns: 1fr;
+        padding: 0 1rem;
     }
 
     .footer {
@@ -53,6 +54,7 @@ p {
 
     .left, .right {
         text-align: center;
+        align-items: center;
     }
 
     h4 {
@@ -60,6 +62,10 @@ p {
     }
 
     p {
-        font-size: 13px;
+        font-size: 14px;
+    }
+
+    .location {
+        justify-content: center;
     }
 }
