--- a/portfolio/src/components/Heroimgstyles.css
+++ b/portfolio/src/components/Heroimgstyles.css
@@ -1,73 +1,76 @@
-.mask{
-    width:100%;
+.mask {
+    width: 100%;
     height: 100vh;
     position: relative;
 }
-.into-img{
+
+.into-img {
     width: 100%;
     height: 100%;
     background-size: cover;
     background-position: center;
     object-fit: cover;
     opacity: 0.4;
-
 }
-.mask::after{
+
+.mask::after {
     content: "";
     width: 100%;
     height: 100%;
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
     background-color: black;
     opacity: 0.5;
 }
 
-.hero{
+.hero {
     height: 100vh;
     width: 100%;
     position: relative;
-
 }
-.hero .content{
+
+.hero .content {
     position: absolute;
     top: 50%;
     left: 50%;
     text-align: center;
-    transform: translate(-50px,-50px);
+    transform: translate(-50%, -50%);
+    padding: 0 1rem;
 }
 
-.hero .content h1{
-    font-size: 20;
-    padding:0.6rem 0 1.5rem;
+.hero .content h1 {
+    font-size: 3rem;
+    padding: 0.6rem 0 1.5rem;
+    color: white; /* Ensures the text is visible over the background */
 }
 
-.hero .content p{
-    font-size: 15;
+.hero .content p {
+    font-size: 1.2rem;
     font-weight: bold;
+    color: white; /* Ensures the text is visible over the background */
 }
 
-.content .btn{
+.content .btn {
     margin: 0.3rem;
-
 }
+
 .content {
-    margin: 0.3rem 0 0.3rem -50px;
-
+    margin: 0.3rem 0;
 }
-@media  screen and (max-width:500px) {
-    .hero .content h1{
+
+@media screen and (max-width: 500px) {
+    .hero .content h1 {
         font-size: 2rem;
     }
     
-    .hero .content p{
-        font-size: 1.2rem;
+    .hero .content p {
+        font-size: 1rem;
     }
 
-    .content{
+    .content {
         display: block;
         width: 100%;
-        margin:0.3rem 0;
+        margin: 0.3rem 0;
     }
-    
 }
